frontend-public/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-public
  labels:
    app: app-public
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-public
    spec:
      imagePullSecrets:
        - name: registry-key
      containers:

      - name: echoheaders
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080

      - name: ng-placeholder
        image: appsoa.azurecr.io/streamnvr/ng-placeholder:1.0-prod
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-public
  labels:
    app: app-public
spec:
  type: NodePort
  ports:

  - port: 80
    targetPort: 80
    protocol: TCP
    name: http-80

  - port: 82
    targetPort: 8080
    protocol: TCP
    name: http-8080

  - port: 83
    targetPort: 8080
    protocol: TCP
    name: http-cdn

  selector:
    app: app-public
