frontend-public/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:

  name: ingress

  annotations:

    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
 
  - hosts:
    - streamnvr.com
    secretName: tls-streamnvr.com
    
  - hosts:
    - www.streamnvr.com
    secretName: tls-www.streamnvr.com

  rules:

  - host: streamnvr.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-public
          servicePort: 80

  - host: streamnvr.com
    http:
      paths:
      - path: /echo
        backend:
          serviceName: app-public
          servicePort: 82

  - host: www.streamnvr.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-public
          servicePort: 80
